--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
